Add WordPress env vars to `.env` sample file
- Requires that you copy `wp-config-docker.php` to `wp-config.php` in the WordPress container

--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,7 @@
+WORDPRESS_DB_NAME=dock-press
+WORDPRESS_DB_USER=dock-press
+WORDPRESS_DB_PASSWORD=dock-press
+WORDPRESS_DB_HOST=mysql
 MYSQL_DATABASE=dock-press
 MYSQL_USER=dock-press
 MYSQL_PASSWORD=dock-press
