--- a/compose.yml
+++ b/compose.yml
@@ -10,6 +10,7 @@ services:
       - "./docker.env"
       - "./wordpress.env"
     volumes:
+      - ./wp-content/plugins:/var/ww/html/wp-content/plugins
       - wordpress:/var/www/html
     depends_on:
       mysql:
@@ -37,4 +38,3 @@ volumes:
     name: "dock-press-mysql"
   wordpress:
     name: "dock-press-wordpress"
-  
