Add WordPress Dockerfile

--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,8 @@
 services:
   wordpress:
-    image: wordpress:latest
+    build:
+      context: .
+      dockerfile: ./Dockerfile-wordpress
     restart: always
     ports:
       - 8080:80
